Fix implementation of Minus semantics and remove BindType.ONLY_TRIPLES:
- At the right operand of MINUS:
  - variables that occur only in filters are unbound by definition.
  - variables that occur both in triple patterns and in filters should be bound in both places
- Introduced Op.inputVars(): an input var is a var that appears in filters but has has no values generated by the filtered operation.
- Minus.bind() applies a projection on the bindings to implement aforementioned "unbindable" filter vars semantics